--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Deploy via ssh
         run: |
-           echo "${{ secrets.SSH_KEY }}" > id_rsa_key
-           scp -i id_rsa_key "src/*" ${{ secrets.USER }}@${{ secrets.HOST }}:${{ secrets.DIR }}
+           mkdir .ssh
+           echo "SSH_HOST_PUB" > .ssh/known_hosts
+           echo "${{ secrets.SSH_KEY }}" > .ssh/id_rsa_key
+           scp -i .ssh/id_rsa_key "src/*" ${{ secrets.USER }}@${{ secrets.HOST }}:${{ secrets.DIR }}
